Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/8020843/T8020843a.out
T8020843a.java:14:34: compiler.err.prob.found.req: (compiler.misc.invalid.mref: kindname.method, (compiler.misc.report.access: clone(), protected, java.lang.Object))
1 error
